# CNNSV

./: .gitignore  0_init.lua  1_data.lua  2_model.lua  3_loss.lua  4_train.lua  5_test.lua  README.md  ReadmePreparedata.sh  data  data.lua  doall.lua  fbanklist  global.norm  init.lua  initmodel.lua  libpreparedata.lua  loss.lua  model.lua  preparedata.lua  preparedata.readme  readModelParameters.lua  sampleModelParameters  test.lua  testdoall.lua  testmain.lua  train.lua  train.mlf  traindoall.lua  trainmain.lua
data/: f001_01_001  f001_01_001.fbank  f002_04_011  f003_01_027  f003_05_013  f004_03_015  f005_07_016  f008_06_004.fbank  f010_08_004  f012_06_030  f014_09_001  f017_03_021  f017_07_004  f018_02_015  f018_04_027  f018_09_012  f019_04_018  f021_08_022  f025_02_021  f025_04_025.fbank  f026_01_014  f030_03_017.fbank  f036_08_004  f037_09_014  f038_02_023  f042_04_025  f042_04_030  f045_05_024  f045_07_017  f047_06_018  m013_06_015  m017_06_009  m021_04_004  m021_08_018  m023_02_025  m024_08_013  m024_09_001  m027_09_028  m028_06_023  m028_08_011  (+12 more)
htklua/: CMakeLists.txt  Makefile  README  example.lua  htkio.cpp  htktoth-1.0-0.rockspec  htktoth.cpp  init.lua
htklua/chtk/: chtk.cpp  chtk.h
